kubernetes/1.5/manifests/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl-backend
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
