kubernetes/1.5/manifests/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl-frontend
  namespace: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-nginx
        image: nginx:latest
        ports:
        - containerPort: 80
