kubernetes/1.5/manifests/svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-backend
  namespace: app
spec:
  selector:
    app: backend
  ports:
    - name: backend-multitool
      protocol: TCP
      port: 9002
      targetPort: 8080
