kubernetes/1.5/manifests/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
  namespace: app
spec:
  selector:
    app: frontend
  ports:
    - name: frontend-nginx
      protocol: TCP
      port: 9001
      targetPort: 80
